test/fails/bad_generics/core6.lgl
`u app_mat<`t : mat, `u : vec>(`t->`u m, `t x) { // mat->vec makes no sense
    return m * x;
}

void main() {
    print 1;
}